--- a/GroupB_Project/GroupB_Project.csproj
+++ b/GroupB_Project/GroupB_Project.csproj
@@ -6,15 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Views\JaeWook\**" />
+    <Content Remove="Views\JaeWook\**" />
+    <EmbeddedResource Remove="Views\JaeWook\**" />
+    <None Remove="Views\JaeWook\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.10" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\JaeWook\" />
   </ItemGroup>
 
 </Project>
