--- a/.github/workflows/PomodoroPlanner.yml
+++ b/.github/workflows/PomodoroPlanner.yml
@@ -9,7 +9,7 @@ env:
   AZURE_WEBAPP_PUBLISH_PROFILE: ${{ secrets.PomodoroPlanner_e05b }}
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 5.0.x
-  WORKING_DIRECTORY: GroupB_Rep
+  WORKING_DIRECTORY: GroupB_Project
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
