added azure database

--- a/GroupB_Project/appsettings.json
+++ b/GroupB_Project/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-GroupB_Project-AE650676-C6E6-4D6F-848F-55747F42E172;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:pomodoro-projectdbserver.database.windows.net,1433;Initial Catalog=Pomodoro_Project_db;Persist Security Info=False;User ID=lwtech.tester;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
